
cc_library(
	name = "property_map",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_mpi//:mpi",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_smart_ptr//:smart_ptr"
	],
)
