
cc_library(
	name = "property_map",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_any//:any",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_function//:function",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_mpi//:mpi",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_multi_index//:multi_index",
		"@com_github_bazelboost_optional//:optional",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_iterator//:iterator"
	],
)
